Up-To-Date themes with new classes

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -17,6 +17,28 @@
     background-color: rgba(0,0,0,.6);
 }
 
+.theme-dark .perksModal-CLcR1c {
+    background-color: transparent;
+}
+
+.preview-3SR4Rd {
+    color: white;
+}
+
+.previewContainer-1GxmBJ {
+    background-color: #912;
+}
+
+.theme-light .messageContainer-3a6gLR {
+    background-color: #181818;
+}
+
+.text-md-normal-304U3g,
+.text-xs-normal-3SiVjE,
+.text-sm-normal-3Zj3Iv {
+  color: white !important;
+}
+
 /* Transparency */
 .container-ZMc96U.themed-Hp1KC_, .chat-2ZfjoI, .container-2o3qEW, .sidebar-1tnWFu, .contentRegion-3HkfJJ, .sidebarRegionScroller-FXiQOh,
 .nowPlayingColumn-1eCBCN {
@@ -1033,28 +1055,28 @@
     border-radius: 3px;
 }
 
-.reactionTooltipText-2M3J-B a {
+.reactionTooltipText-iAWHhX a {
     color: red;
     font-weight: bold;
 }
 
-.reaction-2A2y9y.reactionMe-3I9gFK {
+.reaction-3vwAF2.reactionMe-1PwQAc {
     background-color: transparent;
     border: 2px outset #C13 !important;
 }
 
-.reaction-2A2y9y {
+.reaction-3vwAF2 {
     background: transparent;
     border: 2px outset blue;
 }
 
 
-.reaction-2A2y9y:hover {
+.reaction-3vwAF2:hover {
     background-color: transparent;
     border: 2px outset #00db00;
 }
 
-.reactionCount-1zkLcN {
+.reactionCount-26U4As {
     color: white !important;
 }
 
@@ -1944,7 +1966,7 @@
     background-color: transparent;
 }
 
-.theme-dark .selected-3H3-RC {
+.theme-dark .clickable-2V8YKY[aria-disabled=false]>.base-2v-uc0:hover, .clickable-2V8YKY[aria-selected=true]>.base-2v-uc0 {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -2176,11 +2198,6 @@
     background-color: transparent;
 }
 
-.botTagRegular-kpctgU {
-    background: #912;
-}
-
-
 .bd-toast {
     background-color: #912;
     box-shadow: none;
@@ -2271,6 +2288,21 @@
 
 .upload-vLbqu- {
     background-color: transparent;
+}
+
+.botTagRegular-kpctgU {
+    background: #912;
+}
+
+.uploadModal-2ie9O_ .inner-rBP-MS .file-163EuR .icon-HW4tZ- {
+    right: 99px;
+    bottom: -294px;
+    margin-top: -2px !important;
+}
+  
+.theme-dark .root-g14mjS.uploadModal-2ie9O_ {
+    width: 650px;
+    height: 450px;
 }
 
 
