--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -12,6 +12,20 @@
     background-color: transparent;
 }
 
+.theme-dark .perksModal-CLcR1c {
+    background-color: transparent;
+}
+
+.preview-3SR4Rd {
+    color: white;
+}
+
+.text-md-normal-304U3g,
+.text-xs-normal-3SiVjE,
+.text-sm-normal-3Zj3Iv {
+  color: white !important;
+}
+
 /* Add shade to background */
 .layers-1YQhyW {
     background-color: rgba(0,0,0,.6);
@@ -1428,28 +1442,28 @@
     border-radius: 5px;
 }
 
-.reaction-2A2y9y {
+.reaction-3vwAF2 {
     border-radius: 7px;
     background: rgba(0,0,0,.4);
     border: 1px solid transparent;
 }
 
-.reaction-2A2y9y:hover {
+.reaction-3vwAF2:hover {
     background-color: #2AB;
     border-color: #1BC;
 }
 
-.reaction-2A2y9y.reactionMe-3I9gFK .reactionCount-1zkLcN, .reactionCount-1zkLcN {
+.reaction-3vwAF2.reactionMe-1PwQAc .reactionCount-26U4As, .reactionCount-26U4As {
     color: white !important;
 }
 
-.reaction-2A2y9y.reactionMe-3I9gFK {
+.reaction-3vwAF2.reactionMe-1PwQAc {
     background-color: #2AB;
     border-color: white;
     border-style: ridge;
 }
 
-.reactionTooltipText-2M3J-B a {
+.reactionTooltipText-iAWHhX a {
     color: red;
     font-weight: bold;
 }
@@ -1748,7 +1762,7 @@
     background-color: transparent;
 }
 
-.theme-dark .selected-3H3-RC {
+.theme-dark .clickable-2V8YKY[aria-disabled=false]>.base-2v-uc0:hover, .clickable-2V8YKY[aria-selected=true]>.base-2v-uc0 {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -2206,6 +2220,17 @@
 
 .upload-vLbqu- {
     background-color: transparent;
+}
+
+.uploadModal-2ie9O_ .inner-rBP-MS .file-163EuR .icon-HW4tZ- {
+    right: 99px;
+    bottom: -294px;
+    margin-top: -2px !important;
+}
+  
+.theme-dark .root-g14mjS.uploadModal-2ie9O_ {
+    width: 650px;
+    height: 450px;
 }
 
 
