--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -12,9 +12,23 @@
     background-color: transparent;
 }
 
+.theme-dark .perksModal-CLcR1c {
+    background-color: transparent;
+}
+
 /* Add shade to background */
 .layers-1YQhyW {
     background-color: rgba(0,0,0,.65);
+}
+
+.text-md-normal-304U3g,
+.text-xs-normal-3SiVjE,
+.text-sm-normal-3Zj3Iv {
+  color: white !important;
+}
+
+.preview-3SR4Rd {
+    color: white;
 }
 
 /* Transparency */
@@ -34,7 +48,6 @@
 .botTagRegular-kpctgU {
     background: #f44;
 }
-
 
 .theme-dark .closeButton-PCZcma {
     border: none;
@@ -1157,26 +1170,26 @@ background-color: transparent  !important;
     fill: #f44;
 }
 
-.reaction-2A2y9y {
+.reaction-3vwAF2 {
     border-radius: 3px;
     background: rgba(255, 68, 68, .4);
 }
 
-.reactionCount-1zkLcN {
+.reactionCount-26U4As {
     color: white !important;
 }
 
-.reaction-2A2y9y:hover {
+.reaction-3vwAF2:hover {
     background-color: rgba(255, 68, 68, .8);
     border-color: transparent;
 }
 
-.reaction-2A2y9y.reactionMe-3I9gFK {
+.reaction-3vwAF2.reactionMe-1PwQAc {
     background-color: #C67;
     border-color: transparent;
 }
 
-.reactionTooltipText-2M3J-B a {
+.reactionTooltipText-iAWHhX a {
     color: white;
 }
 
@@ -2220,7 +2233,7 @@ background-color: transparent  !important;
     background-image: -webkit-radial-gradient(50% 53%, ellipse cover, #292929 15%, #000000 71%);
 }
 
-.theme-dark .selected-3H3-RC {
+.theme-dark .clickable-2V8YKY[aria-disabled=false]>.base-2v-uc0:hover, .clickable-2V8YKY[aria-selected=true]>.base-2v-uc0 {
     background-color: transparent;
     border: 2px solid #C67;
 }
@@ -2479,6 +2492,21 @@ background-color: transparent  !important;
 }
 
 .upload-vLbqu- {
+    background-color: transparent;
+}
+
+.uploadModal-2ie9O_ .inner-rBP-MS .file-163EuR .icon-HW4tZ- {
+    right: 99px;
+    bottom: -294px;
+    margin-top: -2px !important;
+}
+  
+.theme-dark .root-g14mjS.uploadModal-2ie9O_ {
+    width: 650px;
+    height: 450px;
+}
+
+.input-2g-os5 {
     background-color: transparent;
 }
 
