--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -11,6 +11,24 @@
     background-color: transparent;
 }
 
+.theme-dark .perksModal-CLcR1c {
+    background-color: transparent;
+}
+
+.preview-3SR4Rd {
+    color: white;
+}
+
+.theme-light .messageContainer-3a6gLR {
+    background-color: #181818;
+}
+
+.reactionTooltipText-iAWHhX a {
+    color: #00DFF1;
+    font-weight: bold;
+    background-color: black;
+    padding: 2px;
+}
 
 .bg-1QIAus {
     background-color: transparent;
@@ -87,6 +105,41 @@
 
 .theme-dark .option-ayUoaq.user-1dKxvu .displayUsername-UTerwm {
     color: white;
+}
+
+.applicationStreamingAvatar-3RXs7A .avatar-b5OQ1N,
+.voiceSectionGuildImage-TctMOd, .voiceSectionNoGuildImageWrapper-17kLyh,
+.voiceSectionAssets-1dg-E5 {
+    border-radius: 4px;
+}
+
+.theme-dark .voiceSectionIcon-1_4-an, .theme-dark .xboxSectionIcon-1xiv4J {
+    color: white;
+}
+
+.partyMember-YLjOa7 foreignObject {
+    mask: none;
+}
+
+.theme-dark .outer-2JOHae.active-1W_Gl9, .theme-dark .outer-2JOHae.interactive-2zD88a:hover {
+    background-color: rgba(0, 0, 0, 0.28);
+}
+
+.partyMember-YLjOa7 .avatar-b5OQ1N {
+    border-radius: 5px;
+}
+
+.partyMember-YLjOa7 {
+    -webkit-mask: none;
+    mask: none;
+}
+
+.theme-dark .voiceSectionIconWrapper-4yoj76 {
+    background-color: #61a5d8;
+}
+
+.voiceSectionIconWrapper-4yoj76 {
+    border-radius: 4px;
 }
 
 .theme-dark .searchAnswer-23w-CH, .theme-dark .searchFilter-2UfsDk {
@@ -408,22 +461,24 @@
     border: 3px outset #76AAD9;
 }
 
-.reactionCount-1zkLcN {
+.reactionCount-26U4As {
     color: white !important;
 }
 
-.reaction-2A2y9y.reactionMe-3I9gFK {
+.reaction-3vwAF2.reactionMe-1PwQAc {
     background: rgba(97, 164, 216, .48);
     border: 3px inset #61a5d8;
 }
 
-.reaction-2A2y9y {
+.reaction-3vwAF2 {
     border-radius: 7px;
     background: rgba(0,0,0,.25);
     border: 3px solid #242424;
 }
 
-.reaction-2A2y9y:hover {
+/* .reaction-2A2y9y */
+
+.reaction-3vwAF2:hover {
     background-color: rgba(0,0,0,.55);
     border: 3px outset #242424;
 }
@@ -561,7 +616,7 @@
 }
 
 .wrapper-1VLyxH, .avatar-b5OQ1N {
-    border-radius: 4px !important;
+    border-radius: 5px !important;
 }
 
 .avatar-2jnSDw foreignObject, .noAvatarIcon-3Jqqzy foreignObject {
@@ -936,7 +991,7 @@
     padding: 1px 9px;
 }
 
-.theme-dark .selected-3H3-RC {
+.theme-dark .clickable-2V8YKY[aria-disabled=false]>.base-2v-uc0:hover, .clickable-2V8YKY[aria-selected=true]>.base-2v-uc0 {
     background-color: #76AAD9;
     border: 3px outset #76AAD9;
 }
@@ -1758,6 +1813,12 @@
     background-color: transparent;
 }
 
+.text-md-normal-304U3g,
+.text-xs-normal-3SiVjE,
+.text-sm-normal-3Zj3Iv {
+  color: white !important;
+}
+
 .container-x8Y1ix:hover {
     background-color: rgba(118, 171, 217, .33);
 }
@@ -2272,10 +2333,27 @@
     background-color: transparent;
 }
 
+.uploadModal-2ie9O_ .inner-rBP-MS .file-163EuR .icon-HW4tZ- {
+    right: 99px;
+    bottom: -294px;
+    margin-top: -2px !important;
+}
+  
+.theme-dark .root-g14mjS.uploadModal-2ie9O_ {
+    width: 650px;
+    height: 450px;
+}
 
-
-
-
+.search-25t1e9 .searchBox-31Zv9h {
+    background-color: transparent;
+}
+.search-25t1e9 .searchBox-31Zv9h .searchBoxInput-3h4etz {
+    color: white;
+}
+.search-25t1e9 .searchBox-31Zv9h .searchIcon-3X4BYL,
+.search-25t1e9 .searchBox-31Zv9h .closeIcon-BMGxx0 {
+  color: white !important;
+}
 
 
 
