--- a/My_Theme_Collection/BubbleThemev2.theme.css
+++ b/My_Theme_Collection/BubbleThemev2.theme.css
@@ -1,7 +1,7 @@
 /**
  * @name Bubble Theme v2
  * @author ShadowDevilsAvenged
- * @description Bubbles, Bubbles and more Bubbles. 4 themes in one file
+ * @description Bubbles, Bubbles and more Bubbles.
  * @version 2
  */
 
@@ -9,6 +9,21 @@
     background-size: cover;
     background-color: transparent;
     background-image: url(https://images.alphacoders.com/263/263303.jpg);
+}
+
+.preview-3SR4Rd {
+    color: white;
+}
+
+.theme-light .messageContainer-3a6gLR {
+    background-color: #181818;
+}
+
+.reactionTooltipText-iAWHhX a {
+    color: white;
+    font-weight: bold;
+    background-color: black;
+    padding: 2px;
 }
 
 .bg-1QIAus {
@@ -34,6 +49,10 @@
 }
 
 .scroller-3X7KbA {
+    background-color: transparent;
+}
+
+.clickable-vvKY2q .header-3OsQeK:hover, .selected-1GtAC5 .header-3OsQeK {
     background-color: transparent;
 }
 
@@ -73,6 +92,8 @@
 .theme-dark .tierMarkerBackground-G8FoN4 {
     background-color: transparent;
 }
+
+
 
 
 .wrapper-3kah-n::after, .circleIconButton-1VxDrg::after {
@@ -205,6 +226,16 @@
 .search-25t1e9 .searchBox-31Zv9h .searchIcon-3X4BYL,
 .search-25t1e9 .searchBox-31Zv9h .searchBoxInput-3h4etz {
     color: white;
+}
+
+.search-25t1e9 .searchBox-31Zv9h .closeIcon-BMGxx0 {
+    color: white !important;
+}
+
+.text-md-normal-304U3g,
+.text-xs-normal-3SiVjE,
+.text-sm-normal-3Zj3Iv {
+  color: white !important;
 }
 
 *::-webkit-input-placeholder {
@@ -865,23 +896,23 @@
     fill: #090988;
 }
 
-.reaction-2A2y9y {
+.reaction-3vwAF2 {
     border-radius: 50pc;
     background: rgb(0, 0, 0, .2);
     border: 1px solid black;
 }
 
-.reaction-2A2y9y.reactionMe-3I9gFK {
+.reaction-3vwAF2.reactionMe-1PwQAc {
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -2px 9px -16px rgba(231, 254, 255, 0.33);
     background-image: radial-gradient(circle closest-side at 9px 9px, rgba(255, 255, 255, .65) 10%, rgba(56, 0, 211, 0.29) 100%, rgba(56, 0, 211, 0.29) 100%);
     border-color: transparent;
 }
 
-#app-mount .reactionCount-1zkLcN {
+#app-mount .reactionCount-26U4As {
     color: white;
 }
 
-.reaction-2A2y9y:hover {
+.reaction-3vwAF2:hover {
     background-color: rgba(54, 57, 120, .8);
     border-color: transparent;
 }
@@ -2018,7 +2049,7 @@
     background-color: transparent;
 }
 
-.theme-dark .selected-3H3-RC {
+.theme-dark .clickable-2V8YKY[aria-disabled=false]>.base-2v-uc0:hover, .clickable-2V8YKY[aria-selected=true]>.base-2v-uc0 {
     background-image: radial-gradient(circle closest-side at 13px 13px, rgba(255, 255, 255, .85) 10%, rgba(34, 67, 182, 0.49) 100%, rgba(34, 67, 182, 0.49) 100%);
     background-color: transparent;
     border-radius: 50px;
@@ -2490,4 +2521,16 @@
 .searchBar-3TnChZ .searchBarComponent-3N7dCG {
     background-color: transparent;
     color: white;
+}
+
+.theme-dark .root-g14mjS.uploadModal-2ie9O_ {
+    width: 650px;
+    min-height: 450px;
+}
+
+.uploadModal-2ie9O_ .inner-rBP-MS .file-163EuR .icon-HW4tZ- {
+    left: 99px;
+    top: -7px;
+    position: relative;
+    margin-top: 5px !important;
 }
