--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -18,6 +18,29 @@
  :root {
      --avatar-size: 55px;
  }
+
+ .theme-dark .perksModal-CLcR1c {
+    background-color: transparent;
+}
+
+.preview-3SR4Rd {
+    color: white;
+}
+
+.theme-light .messageContainer-3a6gLR {
+    background-color: #181818;
+}
+
+.reactionTooltipText-iAWHhX a {
+    color: white;
+    font-weight: bold;
+    background-color: black;
+    padding: 2px;
+}
+
+.previewContainer-1GxmBJ  {
+    background-color: #008c99;
+}
  
  .hljs,
  .inline,
@@ -213,6 +236,16 @@
  .search-25t1e9 .searchBox-31Zv9h .searchIcon-3X4BYL {
      color: white;
  }
+
+ .search-25t1e9 .searchBox-31Zv9h {
+    background-color: transparent;
+}
+
+.text-md-normal-304U3g,
+.text-xs-normal-3SiVjE,
+.text-sm-normal-3Zj3Iv {
+  color: white !important;
+}
  
  .theme-dark .pageWrapper-2PwDoS {
      background-color: rgba(0, 0, 0, 0.311);
@@ -732,7 +765,7 @@
      fill: white;
  }
  
- .theme-dark .selected-3H3-RC {
+ .theme-dark .clickable-2V8YKY[aria-disabled=false]>.base-2v-uc0:hover, .clickable-2V8YKY[aria-selected=true]>.base-2v-uc0 {
      background: linear-gradient(45deg, #008c99 0%, transparent 40%);
  }
  
@@ -967,31 +1000,31 @@
      margin-left: 7px;
  }
  
- .reaction-2A2y9y .emoji {
+ .reaction-3vwAF2 .emoji {
      width: 1.21rem;
      height: 1.21rem;
  }
  
- .reactionCount-1zkLcN,
- .reaction-2A2y9y:hover .reactionCount-1zkLcN {
+ .reactionCount-26U4As,
+ .reaction-3vwAF2:hover .reactionCount-26U4As {
      color: silver;
  }
  
- .reactionMe-3I9gFK .reactionCount-1zkLcN,
- .reactionMe-23mbRf:hover .reactionCount-1zkLcN {
+ .reactionMe-1PwQAc .reactionCount-26U4As,
+ .reactionMe-23mbRf:hover .reactionCount-26U4As {
      color: #008c99;
  }
  
- .reaction-2A2y9y.reactionMe-3I9gFK {
+ .reaction-3vwAF2.reactionMe-1PwQAc {
      background-color: rgb(0, 140, 153, 0.154);
      border: 2px solid #008c99;
  }
  
- .reaction-2A2y9y {
+ .reaction-3vwAF2 {
     background: rgba(0, 0, 0, 0.42);
 }
 
-.reaction-2A2y9y:hover {
+.reaction-3vwAF2:hover {
     background-color: #11646b;
     border-color: transparent;
 }
