Add Friend Option being weird lol

--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2166,7 +2166,8 @@
   border-color: transparent;
 }
 
-.addFriendInputWrapper-kkoSV9 .input-2g-os5 {
+.addFriendInputWrapper-kkoSV9 .input-2g-os5,
+.addFriendHint-1EVQJY {
   padding: 0 12px;
 }
 
