Whoops mistake, but fixed

--- a/My_Theme_Collection/BubbleThemev2.theme.css
+++ b/My_Theme_Collection/BubbleThemev2.theme.css
@@ -2347,9 +2347,12 @@
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -14px 9px -16px rgba(231, 254, 255, 0.33) !important;
 }
 
-.input-1bmui3,
-.addFriendHint-1EVQJY {
+.input-1bmui3 {
     padding: 0 12px;
+}
+
+.addFriendHint-1EVQJY {
+    padding: 0 13px;
 }
 
 .addFriendInputWrapper-kkoSV9 {
