--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2166,7 +2166,7 @@
   border-color: transparent;
 }
 
-.addFriendInputWrapper-kkoSV9 .input-2g-os5,
+.input-1bmui3,
 .addFriendHint-1EVQJY {
   padding: 0 12px;
 }
