--- a/My_Theme_Collection/BubbleThemev2.theme.css
+++ b/My_Theme_Collection/BubbleThemev2.theme.css
@@ -232,6 +232,10 @@
     color: white !important;
 }
 
+.background-3X6N7I {
+    background-color: transparent;
+}
+
 .text-md-normal-304U3g,
 .text-xs-normal-3SiVjE,
 .text-sm-normal-3Zj3Iv {
