--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -39,6 +39,10 @@
   color: white !important;
 }
 
+.background-3X6N7I {
+    background-color: transparent;
+}
+
 /* Transparency */
 .container-ZMc96U.themed-Hp1KC_, .chat-2ZfjoI, .container-2o3qEW, .sidebar-1tnWFu, .contentRegion-3HkfJJ, .sidebarRegionScroller-FXiQOh,
 .nowPlayingColumn-1eCBCN {
