--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -26,6 +26,10 @@
   color: white !important;
 }
 
+.background-3X6N7I {
+    background-color: transparent;
+}
+
 /* Add shade to background */
 .layers-1YQhyW {
     background-color: rgba(0,0,0,.6);
