--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -21,6 +21,8 @@
     background-color: rgba(0,0,0,.65);
 }
 
+
+
 .text-md-normal-304U3g,
 .text-xs-normal-3SiVjE,
 .text-sm-normal-3Zj3Iv {
@@ -381,6 +383,10 @@
 .radioIconForeground-2BMavi {
     color: white;
     r: 9;
+}
+
+.background-3X6N7I {
+    background-color: transparent;
 }
 
 .lookOutlined-3yKVGo.colorBrand-I6CyqQ {
