--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -23,6 +23,10 @@
     background-color: #181818;
 }
 
+.background-3X6N7I {
+    background-color: transparent;
+}
+
 .reactionTooltipText-iAWHhX a {
     color: #00DFF1;
     font-weight: bold;
