--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2445,6 +2445,10 @@
   color: white !important;
 }
 
+.background-3X6N7I {
+  background-color: transparent;
+}
+
 
 
 .main-color {color: #9b2742 rgb(155, 39, 66)}
