--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -246,6 +246,10 @@
 .text-sm-normal-3Zj3Iv {
   color: white !important;
 }
+
+.background-3X6N7I {
+    background-color: transparent;
+}
  
  .theme-dark .pageWrapper-2PwDoS {
      background-color: rgba(0, 0, 0, 0.311);
