--- a/My_Theme_Collection/BubbleThemev2.theme.css
+++ b/My_Theme_Collection/BubbleThemev2.theme.css
@@ -15,6 +15,10 @@
     color: white;
 }
 
+.root-2s1-ri>* {
+    background-color: transparent;
+}
+
 .theme-light .messageContainer-3a6gLR {
     background-color: #181818;
 }
