--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -17,6 +17,10 @@
     background-color: rgba(0,0,0,.6);
 }
 
+.root-2s1-ri>* {
+    background-color: transparent;
+}
+
 .theme-dark .perksModal-CLcR1c {
     background-color: transparent;
 }
