--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -20,6 +20,10 @@
     color: white;
 }
 
+.root-2s1-ri>* {
+    background-color: transparent;
+}
+
 .text-md-normal-304U3g,
 .text-xs-normal-3SiVjE,
 .text-sm-normal-3Zj3Iv {
