--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -16,6 +16,10 @@
     background-color: transparent;
 }
 
+.root-2s1-ri>* {
+    background-color: transparent;
+}
+
 /* Add shade to background */
 .layers-1YQhyW {
     background-color: rgba(0,0,0,.65);
