--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -19,6 +19,10 @@
   top: -1px;
 }
 
+.root-2s1-ri>* {
+  background-color: transparent;
+}
+
 .reactionTooltipText-iAWHhX a {
   color: white;
   font-weight: bold;
