--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -19,6 +19,10 @@
      --avatar-size: 55px;
  }
 
+.root-2s1-ri>* {
+    background-color: transparent;
+}
+
  .theme-dark .perksModal-CLcR1c {
     background-color: transparent;
 }
