connected account fixed

--- a/My_Theme_Collection/BubbleThemev2.theme.css
+++ b/My_Theme_Collection/BubbleThemev2.theme.css
@@ -1386,7 +1386,7 @@
     padding: 4px 12px;
 }
 
-.connectedAccount-1xKpli {
+.connectedAccountContainer-SlCC-S {
     background-image: radial-gradient(circle closest-side at 43px 43px, rgba(255, 255, 255, .85) 10%, rgba(42, 1, 155, 0.29) 100%, rgba(42, 1, 155, 0.29) 100%);
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -32px 9px -16px rgba(231, 254, 255, 0.33);
