--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -1621,7 +1621,7 @@
 }
 
 
-.connectedAccount-1xKpli {
+.connectedAccountContainer-SlCC-S {
     border: 2px ridge #C13;
     background-color: rgba(153, 17, 33, .77);
     border-radius: 6px;
