--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -1503,7 +1503,7 @@
     border-top: none;
 }
 
-.connectedAccount-1xKpli {
+.connectedAccountContainer-SlCC-S {
     background-image: -webkit-linear-gradient(90deg, #000000 5%, #22a9bb 100%);
     border-radius: 7px;
     border: 1px outset;
