--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -1513,7 +1513,7 @@ background-color: transparent  !important;
     border-top: none;
 }
 
-.connectedAccount-1xKpli {
+.connectedAccountContainer-SlCC-S {
     background-color: rgba(255, 68, 68, .12);
     border-radius: 6px;
     border: 2px solid;
