--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -1220,7 +1220,7 @@
     background-color: transparent;
 }
 
-.connectedAccount-1xKpli {
+.connectedAccountContainer-SlCC-S {
     background-color: rgba(97, 165, 216, .32);
     border-radius: 6px;
     border: 1px solid #61A5D8;
