--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2131,7 +2131,7 @@
   border-bottom: none;
 }
 
-.connectedAccount-1xKpli {
+.connectedAccountContainer-SlCC-S {
   background-color: #9b2742;
   border-radius: 5px;
   border: none;
