--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -939,12 +939,12 @@
      margin-top: -40px;
  }
  
- .connectedAccount-1xKpli {
+ .connectedAccountContainer-SlCC-S {
      border-radius: 12px;
      border: 2px solid black;
  }
  
- .connectedAccount-1xKpli {
+ .connectedAccountContainer-SlCC-S {
      background-color: rgba(0, 0, 0, 0.324);
  }
  
