--- a/My_Theme_Collection/BubbleThemev2.theme.css
+++ b/My_Theme_Collection/BubbleThemev2.theme.css
@@ -23,6 +23,14 @@
     background-color: #181818;
 }
 
+.withTagAsButton-OsgQ9L:hover, 
+.withTagless-10ooWt:hover {
+  background-color: rgba(0, 0, 0, .3);
+  border-radius: 50px;
+  border: 1px solid #76AAD9;
+  color: white;
+}
+
 .reactionTooltipText-iAWHhX a {
     color: white;
     font-weight: bold;
