--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 1
+ * @version 1.3
  */
 
  @import url("https://fonts.googleapis.com/css?family=Livvic&display=swap");
@@ -954,6 +954,14 @@
      margin: 1px 0 12px 12px;
      border: 3px solid transparent;
  }
+
+ .withTagAsButton-OsgQ9L:hover, 
+.withTagless-10ooWt:hover {
+  background-color: rgba(0, 0, 0, .3);
+  border-radius: 4px;
+  border: 1px solid #008c99;
+  color: white;
+}
  
  .listRow-2nO1T6:hover {
      background-color: rgba(0, 140, 153, 0.208);
