--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 1
+ * @version 1.3
  */
 
 /* Main Background */
@@ -32,6 +32,14 @@
 
 .background-3X6N7I {
     background-color: transparent;
+}
+
+.withTagAsButton-OsgQ9L:hover, 
+.withTagless-10ooWt:hover {
+  background-color: rgba(0, 0, 0, .3);
+  border-radius: 4px;
+  border: 1px solid #22a9bb;
+  color: white;
 }
 
 /* Add shade to background */
