--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 1
+ * @version 1.3
  */
 
 /* Main Background */
@@ -25,6 +25,13 @@
     background-color: rgba(0,0,0,.65);
 }
 
+.withTagAsButton-OsgQ9L:hover, 
+.withTagless-10ooWt:hover {
+  background-color: rgba(0, 0, 0, .3);
+  border-radius: 4px;
+  border: 1px solid #f44;
+  color: white;
+}
 
 
 .text-md-normal-304U3g,
