--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 1
+ * @version 1.3
  */
 
  .app-2CXKsg {
@@ -21,6 +21,14 @@
 
 .root-2s1-ri>* {
     background-color: transparent;
+}
+
+.withTagAsButton-OsgQ9L:hover, 
+.withTagless-10ooWt:hover {
+  background-color: rgba(0, 0, 0, .3);
+  border-radius: 4px;
+  border: 1px solid #00aeff;
+  color: white;
 }
 
 .theme-light .messageContainer-3a6gLR {
