--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 1
+ * @version 1.3
  */
 
  #app-mount .app-2CXKsg {
@@ -21,6 +21,14 @@
 
 .root-2s1-ri>* {
   background-color: transparent;
+}
+
+.withTagAsButton-OsgQ9L:hover, 
+.withTagless-10ooWt:hover {
+  background-color: rgba(0, 0, 0, .3);
+  border-radius: 4px;
+  border: 1px solid #9b2742;
+  color: white;
 }
 
 .reactionTooltipText-iAWHhX a {
